<resources>
    <string name="app_name">Grofers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Msg">We will Send SMS with a conformation code to  </string>
    <string name="code">this number</string>
    <string name="get"> Use referred code and get up to 150 Grofers Cash</string>
    <string name="caller"> One touch login with Trucaller</string>
    <string name="text2"> Where do you want your delivery?</string>
    <string name="text1">Home delivery in 13+ cities</string>
    <string name="text3">Set location manualy</string>
    <string name="text_button">USE MY LOCATION</string>

    <string name="item_text">No items in your cart</string>
    <string name="favorite_text">your Favourite are just a click away</string>
    <string name="_text">Sign in with Google</string>
    <string name="forgetet">Forget Your Password</string>
    <string name="signin">Signin with email</string>
    <string name="exclusive">Exclusive wholesale prices</string>
    <string name="smart">Smart Bachat Club</string>
    <string name="details">Enter Details Here</string>
    <string name="password">Forget password</string>
    <string name="use_location">Use my location</string>
    <string name="search_product">Search for products</string>
    <string name="categories">Categories</string>
    <string name="saver">Top Savers Today</string>
    <string name="selling">Best Selling Item </string>

    <string name="app_name2">All Categories</string>
    <string name="see_all">See all</string>
    <string name="blockbasterl">Block Baster Sale</string>

    <string name="app_name4">ToolbarSearchview</string>
    <string-array name="months_array">
        <item>India</item>
        <item>Amerika</item>
        <item>Pakistan</item>
        <item>Ijrail</item>
        <item>Dubai</item>
        <item>Japan</item>
        <item>Rus</item>
        <item>Switzerland</item>
        <item>Igland</item>
        <item>Nagaland</item>
        <item>China</item>
        <item>Australiya</item>
    </string-array>

    <string name="app_name5">ToolbarSearchview</string>
    <string-array name="months_array1">
        <item>stainless</item>
        <item>staples</item>
        <item>household need</item>
        <item>personal care</item>
        <item>baby and kids</item>
    </string-array>


    <string name="dscrption_text">Treat your family to a combination of health and
                  taste with Nature Fresh Chakki Atta which is made from the choiset
                  grains of wheat .Packed with nutrition , it is doughed to make soft
                  and fluffy roti,paranthas etc and can also be used to make a varify
                  of other sweets and savouriea</string>

    <string name="key_feature">Perfect combination of health and taste Naturally rich in
                  fibre and hutrient Helps prepare soft and fluffy roti, paranthhas etc.
                  ideal to prepare various sweets and savouries</string>

    <string name="disclaimer_text">Every effort is made to maintain accuracy of all information.
                  However, actual product packaging and materials may contain  more and more
                  different information. it is recommended not to solety on the information
                  presented</string>

    <string name="detail_text">Avent AGRO PVT.LTD. 1818  DISIC industrial Complex Narela Delhi-110040 </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textt">Price for Club Members: Rs254</string>

    <string name="Earn">Earn 250 WinWin points</string>
    <string name="Buy">Buy 6 month Bachat Club membership and get 250 WinWin points</string>
    <string name="gets">and get 250 WinWin points</string>
    <string name="Ok">OK, GOT IT</string>
    <string name="select">Select a plan which suits your needs</string>
    <string name="happy">Happy Bachat Club Member</string>
    <string name="good">"Good discount through Bachat Club.we are saving approx. 600 on a purchase of around 4000 in a month"</string>
    <string name="selects">Select a plan which suits you needs</string>
    <string name="save">Save Beyond Grocery</string>
    <string name="Smartss">Smart Bachat Club</string>


</resources>
