<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocationActivity">


    <ImageView

        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
    <TextView
        android:gravity="center"
        android:text="@string/text1"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/text_margins"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <TextView
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:textColor="@color/textcolor"
        android:text="@string/text2"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button

        android:layout_marginTop="10dp"
        android:id="@+id/location_BTN"
        android:text="@string/text_button"
        android:textColor="@color/textbutton_color"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <TextView
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:text="@string/text3"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


</LinearLayout>