<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            android:textSize="15dp"
            android:textStyle="italic"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/msg_TV"
            android:text="@string/Msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="15dp"
            android:textStyle="italic"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:id="@+id/code_TV"
            android:text="@string/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="+91"
                android:textSize="19dp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/phone_ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="number"
                android:textSize="19dp"
                android:textStyle="italic" />

        </LinearLayout>

        <TextView

            android:layout_marginTop="150dp"
            android:id="@+id/get_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/get"
            android:textSize="13dp"
            android:textStyle="italic" />


        <Button

            android:layout_marginTop="180dp"
            android:id="@+id/enter_BTN"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="#f9f7f6"
            android:layout_marginLeft="100dp"
            android:text=" Enter code"
            android:textSize="15dp"
            android:textStyle="italic" />

        <Button
            android:layout_marginTop="250dp"
            android:id="@+id/next_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Next"
            android:background="#b9b2b2"
            android:textColor="#f9f7f6"
            android:textSize="15dp"
            android:textStyle="italic" />

    </android.support.v7.widget.CardView>

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/caller_BTN"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6894ec"
        android:textColor="#f9f7f6"
        android:text="@string/caller"
        android:textSize="15dp"
        android:textStyle="italic" />



</LinearLayout>