<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.PriceActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:src="@drawable/priceimg"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Earn"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/Buy"
                android:textSize="14dp"
                android:textColor="@color/member"
                android:layout_marginRight="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:background="@color/heading"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="499dp"
        android:background="@drawable/priceimgg" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/Earn"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



                <TextView
                    android:text="@string/Buy"
                    android:textSize="14dp"
                    android:layout_gravity="center"
                    android:textColor="@color/member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/gets"
                    android:textSize="14dp"
                    android:layout_gravity="center"
                    android:textColor="@color/member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@color/card"
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <TextView
                    android:text="@string/select"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <android.support.v7.widget.CardView
                    android:layout_marginTop="20dp"
                    android:id="@+id/cardview"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:elevation="10sp"
                    android:background="@drawable/shadow"
                    android:layout_height="300dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="12 months"
                            android:textColor="@color/card"
                            android:textStyle="normal"
                            android:textSize="16dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="1sp"
                            android:background="@color/nav_welcolor" />




                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Rs 259"
                                android:textSize="20dp"
                                android:layout_marginTop="20dp"
                                android:layout_gravity="center"
                                android:textColor="@color/colorBlack"
                                android:textStyle="bold" />

                        <TextView
                            android:text="Rs 1998"
                            android:textSize="16dp"
                            android:layout_gravity="center"
                            android:textColor="@color/member"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <View
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="1sp"
                            android:background="@color/nav_welcolor" />

                        <TextView
                            android:text="Free Eros Now"
                            android:textColor="@color/colorBlack"
                            android:textStyle="normal"
                            android:textSize="14dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="Subscription"
                            android:textColor="@color/colorBlack"
                            android:textStyle="normal"
                            android:textSize="14dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />



                        <TextView
                            android:text="View"
                            android:textColor="@color/heading"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content" />


                        <View
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="1sp"
                            android:background="@color/nav_welcolor" />


                        <Button
                            android:text="Select"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@color/heading"
                            android:layout_width="140dp"
                            android:layout_height="40dp" />




                    </LinearLayout>


                </android.support.v7.widget.CardView>



            </LinearLayout>



        </LinearLayout>



    </ScrollView>

</LinearLayout>